tests/baselines/reference/awaitLiteralValues.errors.txt
tests/cases/compiler/awaitLiteralValues.ts(2,5): error TS1308: 'await' expression is only allowed within an async function.
tests/cases/compiler/awaitLiteralValues.ts(6,5): error TS1308: 'await' expression is only allowed within an async function.
tests/cases/compiler/awaitLiteralValues.ts(10,5): error TS1308: 'await' expression is only allowed within an async function.
tests/cases/compiler/awaitLiteralValues.ts(14,5): error TS1308: 'await' expression is only allowed within an async function.
tests/cases/compiler/awaitLiteralValues.ts(18,5): error TS1308: 'await' expression is only allowed within an async function.
tests/cases/compiler/awaitLiteralValues.ts(22,5): error TS1308: 'await' expression is only allowed within an async function.


==== tests/cases/compiler/awaitLiteralValues.ts (6 errors) ====
    function awaitString() {
        await 'literal';
        ~~~~~
!!! error TS1308: 'await' expression is only allowed within an async function.
    }
    
    function awaitNumber() {
        await 1;
        ~~~~~
!!! error TS1308: 'await' expression is only allowed within an async function.
    }
    
    function awaitTrue() {
        await true;
        ~~~~~
!!! error TS1308: 'await' expression is only allowed within an async function.
    }
    
    function awaitFalse() {
        await false;
        ~~~~~
!!! error TS1308: 'await' expression is only allowed within an async function.
    }
    
    function awaitNull() {
        await null;
        ~~~~~
!!! error TS1308: 'await' expression is only allowed within an async function.
    }
    
    function awaitUndefined() {
        await undefined;
        ~~~~~
!!! error TS1308: 'await' expression is only allowed within an async function.
    }
    